--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <main class="container">
         <div>
-            <span>Escolha uma cor para o fundo:</span>
+            <span>Choose a color for the background:</span>
             <input type="color">
         </div>
     </main>
